Fix toggle icon to be visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,16 @@ li.active > a {
   font-size: 20px;
 }
 
+/* Navbar toggler */
+/* orginal code with modifications from https://www.codeply.com/go/4FdZGlPMNV/bootstrap-4-custom-navbar-toggler-icon-color */
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.custom-toggler.navbar-toggler {
+  border-color: white;
+}
+
 .home-heading{
   color: white;
   font-size: 80px;
